--- a/gb/19/10/7/n11573381.md
+++ b/gb/19/10/7/n11573381.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zelqru329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zelqru329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zelqru329/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zelqru329/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zelqru329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zelqru329/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zelqru329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>教育部表扬优良特教 福星国小吴致嘉获表扬</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/39e0c2ae3fefb950b89a815a68bc2ad0-600x400.jpeg" />
 <h6>教育部表扬优良特教，福星国小吴致嘉获表扬。（苗县府提供）
 </h6>
 <hr>
-<p>【大纪元2019年10月07日讯】（大纪元记者陈文敏台湾苗栗综合报导）苗栗县<ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E7%A6%8F%E6%98%9F%E5%9B%BD%E5%B0%8F.md#1">福星国小</a><ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E5%90%B4%E8%87%B4%E5%98%89.md#1">吴致嘉</a>教师荣获特殊优良教师，颁奖典礼9月26日在桃园市南方庄园举举行，由教育部长潘文忠亲自主持，感谢教育人员的辛劳与无私奉献。</p>
-<p>获奖人员由教育部选出72名优秀者参加决选，再由教育部聘请专家学者组成评审及决审委员会，选出32名优秀人员接受表扬，其中大专院校组2名、<ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>学校组5名、高中职学校组5名、国中小及幼稚园组19名以及教育行政机关组1名。</p>
-<p>县内<ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E7%A6%8F%E6%98%9F%E5%9B%BD%E5%B0%8F.md#1">福星国小</a><ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E5%90%B4%E8%87%B4%E5%98%89.md#1">吴致嘉</a>教师，从事<ahref="https://github.com/zelqru329/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>服务11年，无怨无悔，牺牲奉献，在特殊教育的教育工作、学生辅导以及行政工作等，都有具体事迹及卓越成就，其无悔奉献心力和散播教育大爱的温暖行径，已为县内特殊教育典范。</p>
+<p>【大纪元2019年10月07日讯】（大纪元记者陈文敏台湾苗栗综合报导）苗栗县<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%8F%E6%98%9F%E5%9B%BD%E5%B0%8F.md#1">福星国小</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E8%87%B4%E5%98%89.md#1">吴致嘉</a>教师荣获特殊优良教师，颁奖典礼9月26日在桃园市南方庄园举举行，由教育部长潘文忠亲自主持，感谢教育人员的辛劳与无私奉献。</p>
+<p>获奖人员由教育部选出72名优秀者参加决选，再由教育部聘请专家学者组成评审及决审委员会，选出32名优秀人员接受表扬，其中大专院校组2名、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>学校组5名、高中职学校组5名、国中小及幼稚园组19名以及教育行政机关组1名。</p>
+<p>县内<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%8F%E6%98%9F%E5%9B%BD%E5%B0%8F.md#1">福星国小</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E8%87%B4%E5%98%89.md#1">吴致嘉</a>教师，从事<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>服务11年，无怨无悔，牺牲奉献，在特殊教育的教育工作、学生辅导以及行政工作等，都有具体事迹及卓越成就，其无悔奉献心力和散播教育大爱的温暖行径，已为县内特殊教育典范。</p>
 <p>苗栗县长徐耀昌表示，除了肯定与感谢吴致嘉教师长期无私的奉献，也期许能借此鼓励长期服务于特殊教育岗位上的所有教育人员，用爱化解一切障碍，成就每一位孩子！</p>
 <p>责任编辑：昌英</p>
 
@@ -16,47 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/18/8/20/n10651309.md#1">儿童多动症 正面对待特殊教育</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/18/8/30/n10678311.md#1">去标签化 启智学校更名“特殊教育学校”</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/18/9/25/n10739593.md#1">平和国小程婉毓 获全国优良特教教师</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/18/12/14/n10910584.md#1">苗栗特殊教育学校  欢庆19周年校庆</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/19/3/12/n11106759.md#1">华州参议院通过两项针对特殊教育法案</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/21/12/13/n13433957.md#1">苗栗福星国小半户外球场     儿童游戏场启用</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/21/12/12/n13432110.md#1">失智者不再迷路 苗栗医院建构“绿色通道”</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/21/12/11/n13431264.md#1">懿德芬芳永流传 募集爱心年菜送香水</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/21/12/9/n13426269.md#1">逛美丽日式艺术园区 享茶屋美食好惬意</a></li>
-<li><a href="https://github.com/zelqru329/djy/blob/master/gb/21/12/9/n13426549.md#1">世华有爱 总会长带头捐赠百床电动护理床</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/20/n10651309.md#1">儿童多动症 正面对待特殊教育</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/30/n10678311.md#1">去标签化 启智学校更名“特殊教育学校”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/9/25/n10739593.md#1">平和国小程婉毓 获全国优良特教教师</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/14/n10910584.md#1">苗栗特殊教育学校  欢庆19周年校庆</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/12/n11106759.md#1">华州参议院通过两项针对特殊教育法案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611161.md#1">竹市三大赏樱胜地樱花陆续绽放 花期到4月</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/9/n13427609.md#1">【百年真相】因好色丧命 向忠发从烈士变叛徒之谜</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/7/n13422469.md#1">医术超凡 明代三名医能预知他人生死命数</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/2/n13412840.md#1">刘伯温神准预言明朝末路 又如何预言当今疫情结局？</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/9/n13427394.md#1">【未解之谜】在基因中发现神的存在</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/3/n13415764.md#1">【未解之谜】百慕大三角大揭秘</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/12/n13431834.md#1">林晓旭：Omicron专攻年轻人 免疫潜力很重要</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/11/n13430834.md#1">【车评】首试QX60预产车 2022 Infiniti QX60</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/12/n13431829.md#1">【舞蹈三剑客】神韵舞蹈专业考核幕后花絮</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13430313.md#1">天文学家发现一颗巨大行星 比木星大10倍</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/11/n13431491.md#1">周田：美军哪些武器令中共军队难以应对（五）</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13430194.md#1">范冰冰晒健身照 网友赞：自拍满分</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13428031.md#1">头顶长白发被叫奶奶 伊能静高情商回应</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13430194.md#1">范冰冰晒健身照 网友赞：自拍满分</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13428816.md#1">见证邱泽许玮甯相恋 蓝心湄：2人有太多共同点</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13428471.md#1">邱泽、许玮甯宣布结婚 同晒甜蜜合照</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13430310.md#1">陆网红主播雪梨林珊珊微博被封 因逃税被罚近亿</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13429523.md#1">咖啡让你远离脂肪肝、肝癌！养肝咖啡冠军是它</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13429445.md#1">自制去污剂 清洗地毯等装饰用品简单又便宜</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/11/n13430671.md#1">遇到明星却不知 网民分享很糗的经验（上）</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/11/n13430946.md#1">马斯克：我考虑辞职 当全职网红</a></li>
-<li><a href="https://github.com/kxpaov3504/djy/blob/master/gb/21/12/10/n13428950.md#1">接骨木莓果能对付所有病毒？快看专家怎么用</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zelqru329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zelqru329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/7/n11573381.htm">教育部表扬优良特教 福星国小吴致嘉获表扬</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/7/n11573381.htm">教育部表扬优良特教 福星国小吴致嘉获表扬</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zelqru329/djy/blob/master/gb/19/10/7/n11573381.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zelqru329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zelqru329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zelqru329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zelqru329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zelqru329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/10/7/n11573381.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
